# inotispy

./: AUTHORS  COPYING  COYPING  INSTALL  Makefile.am  Makefile.in  README  REDHAT.spec.in  aclocal.m4  configure  configure.ac  mt-ci-job-options.yml  run_tests.sh
doc/: Makefile.am  Makefile.in  inotispy.8  inotispyctl.8
etc/: Makefile.am  Makefile.in  inotispy.conf
etc/init.d/: Makefile.am
examples/: Makefile.am
examples/c/: Makefile  README  get_events.c  get_queue_size.c  get_roots.c  unwatch_dir.c  watch_dir.c
examples/perl/: README  get_events.pl  get_queue_size.pl  get_roots.pl  unwatch_dir.pl  watch_dir.pl
init.d/: Makefile.am  inotispy  inotispy.debian  inotispy.sysv
src/: Makefile.am  Makefile.in  config.c  config.h  inotify.c  inotify.h  log.c  log.h  main.c  reply.c  reply.h  request.c  request.h  utils.c  utils.h  zeromq.c  zeromq.h  zmq.c  zmq.h
t/: 01-simple.t
